# assignment-submission-template

./: .env.example  .gitignore  COLUMN_CONSISTENCY_FIX.md  FINAL_SIMPLIFIED_SOLUTION.md  FRAMEWORK_INTEGRATION_REPORT.md  RAY_OPERATORS_SUMMARY.md  README.md  README_DEVELOP.md  README_HIGH_PERFORMANCE_EXECUTOR.md  SIMPLIFIED_APPROACH.md  TEST_RESULTS.md  TIMING_BOUNDARIES_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_consistency_fix.py  test_four_operators.py  test_framework_integration.py  test_ray_operators.py
data/: README.md
data/raw/: sample.csv
docs/: BENCHMARK_TIMING_CHANGES.md  BENCHMARK_TRIGGER_IMPROVEMENT.md  TEST_FIXES_SUMMARY.md  TEST_IMPROVEMENTS.md  datasets.md  design.md  distributed_fixes.md  experiment_protocol.md  high_performance_executor.md  operators.md  ray_runtime_env.md
scripts/: debug_consistency.py  download_datasets.sh  run_smoke_test.sh  setup_ray.sh  setup_spark.sh  verify_timing_boundaries.py
src/: __init__.py
src/bench/: cli.py  data_ingest.py  io.py  logger.py  materialize.py  metrics.py  operator_executor.py  operator_spec.py  pipeline_executor.py  ray_metrics.py
src/engines/ray/: __init__.py  runtime.py
src/engines/ray/operators/: __init__.py  hashingtf.py  idf.py  imputer.py  minmaxscaler.py  onehotencoder.py  standardscaler.py  stringindexer.py  tokenizer.py
src/engines/spark/: __init__.py  session.py
src/engines/spark/operators/: __init__.py  hashingtf.py  idf.py  imputer.py  minmaxscaler.py  onehotencoder.py  standardscaler.py  stringindexer.py  tokenizer.py
tests/: conftest.py  test_benchmark_trigger.py  test_operator_contracts.py  test_performance_accuracy.py  test_pyspark_op_1.py  test_smoke.py
