[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-ray-benchmark"
version = "0.1.0"
description = "Spark MLlib vs Ray preprocessing operators benchmark"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "pyarrow>=8.0.0,<15.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "pyspark==3.5.7",
    "ray[default]>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "memory-profiler>=0.60.0,<1.0.0",
    "psutil>=5.8.0,<6.0.0",
    "black>=22.0.0,<24.0.0",
    "isort>=5.10.0,<6.0.0",
    "flake8>=4.0.0,<7.0.0",
    "mypy>=0.950,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
