[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-ray-benchmark"
version = "0.1.0"
description = "Spark MLlib vs Ray preprocessing operators benchmark"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.23.0,<2.1.0",
    "pyarrow>=9.0.0,<20.0.0",
    "scikit-learn>=1.2.0,<2.0.0",
    "pyspark==3.5.7",
    "ray[default]==2.52.1",
    "datasets==3.4.0",
    "tqdm>=4.66.3",
    "httpx<1,>=0.23.0",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
    "psutil>=5.9.0,<7.0.0",
    "black>=24.0.0,<26.0.0",
    "isort>=5.12.0,<7.0.0",
    "flake8>=6.0.0,<8.0.0",
    "mypy>=1.0.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
